temp.txt
instantiation of "void sm100::bwd::head64::sparse_attn_bwd_kernel<HAVE_ROPE,TmaParams>(sm100::bwd::head64::SparseAttnBwdParams, TmaParams) [with HAVE_ROPE=false, TmaParams=sm100::bwd::head64::TmaParams<cute::tuple<int, int, int>, cute::TiledCopy<cute::Copy_Atom<cute::Copy_Traits<cute::SM90_TMA_LOAD, cute::C<65536>, cute::AuxTmaParams<cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>, const cute::Layout<cute::tuple<cute::C<64>, cute::C<64>, cute::_1>, cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>> &, const cute::Swizzle<3, 4, 3> &>>, bf16>, cute::Layout<cute::tuple<cute::_1, cute::tuple<cute::tuple<cute::tuple<cute::C<64>, cute::C<64>>, cute::_8>>>, cute::tuple<cute::C<0>, cute::tuple<cute::tuple<cute::tuple<cute::_64, cute::_1>, cute::C<4096>>>>>, cute::tuple<cute::_64, cute::_512>>, cute::tuple<int, int, int>, cute::TiledCopy<cute::Copy_Atom<cute::Copy_Traits<cute::SM90_TMA_LOAD, cute::C<65536>, cute::AuxTmaParams<cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>, const cute::Layout<cute::tuple<cute::C<64>, cute::C<64>, cute::_1>, cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>> &, const cute::Swizzle<3, 4, 3> &>>, bf16>, cute::Layout<cute::tuple<cute::_1, cute::tuple<cute::tuple<cute::tuple<cute::C<64>, cute::C<64>>, cute::_8>>>, cute::tuple<cute::C<0>, cute::tuple<cute::tuple<cute::tuple<cute::_64, cute::_1>, cute::C<4096>>>>>, cute::tuple<cute::_64, cute::_512>>, cute::tuple<int, int, int>, cute::TiledCopy<cute::Copy_Atom<cute::Copy_Traits<cute::SM90_TMA_STORE, cute::C<65536>, cute::AuxTmaParams<cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>, const cute::Layout<cute::tuple<cute::C<64>, cute::C<64>, cute::_1>, cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>> &, const cute::Swizzle<3, 4, 3> &>>, bf16>, cute::Layout<cute::tuple<cute::_1, cute::tuple<cute::tuple<cute::tuple<cute::C<64>, cute::C<64>>, cute::C<9>>>>, cute::tuple<cute::C<0>, cute::tuple<cute::tuple<cute::tuple<cute::_64, cute::_1>, cute::C<4096>>>>>, cute::tuple<cute::C<64>, cute::C<576>>>>]" at line 733 of /home/users/chenquanlin/workspace/flash_mla_bwd/FlashMLA/csrc/sm100/prefill/sparse/bwd/head64/instantiations/../phase1.cuh
                    instantiation of "void sm100::bwd::head64::run_bwd_phase1_kernel<D_QK>(const sm100::bwd::head64::SparseAttnBwdParams &) [with D_QK=512]" at line 5 of /home/users/chenquanlin/workspace/flash_mla_bwd/FlashMLA/csrc/sm100/prefill/sparse/bwd/head64/instantiations/phase1_k512.cu
        
        /home/users/chenquanlin/workspace/flash_mla_bwd/FlashMLA/csrc/sm100/prefill/sparse/bwd/head64/instantiations/../phase1.cuh(497): error: no instance of constructor "Tensor" matches the argument list
                    argument types are: (<error-type>)
                          Tensor sQ = make_tensor(make_smem_ptr(plan.dKV_cfg.q_buf.data()), SmemLayoutQ{});
                                 ^
                  detected during:
                    instantiation of "void sm100::bwd::head64::sparse_attn_bwd_kernel<HAVE_ROPE,TmaParams>(sm100::bwd::head64::SparseAttnBwdParams, TmaParams) [with HAVE_ROPE=false, TmaParams=sm100::bwd::head64::TmaParams<cute::tuple<int, int, int>, cute::TiledCopy<cute::Copy_Atom<cute::Copy_Traits<cute::SM90_TMA_LOAD, cute::C<65536>, cute::AuxTmaParams<cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>, const cute::Layout<cute::tuple<cute::C<64>, cute::C<64>, cute::_1>, cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>> &, const cute::Swizzle<3, 4, 3> &>>, bf16>, cute::Layout<cute::tuple<cute::_1, cute::tuple<cute::tuple<cute::tuple<cute::C<64>, cute::C<64>>, cute::_8>>>, cute::tuple<cute::C<0>, cute::tuple<cute::tuple<cute::tuple<cute::_64, cute::_1>, cute::C<4096>>>>>, cute::tuple<cute::_64, cute::_512>>, cute::tuple<int, int, int>, cute::TiledCopy<cute::Copy_Atom<cute::Copy_Traits<cute::SM90_TMA_LOAD, cute::C<65536>, cute::AuxTmaParams<cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>, const cute::Layout<cute::tuple<cute::C<64>, cute::C<64>, cute::_1>, cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>> &, const cute::Swizzle<3, 4, 3> &>>, bf16>, cute::Layout<cute::tuple<cute::_1, cute::tuple<cute::tuple<cute::tuple<cute::C<64>, cute::C<64>>, cute::_8>>>, cute::tuple<cute::C<0>, cute::tuple<cute::tuple<cute::tuple<cute::_64, cute::_1>, cute::C<4096>>>>>, cute::tuple<cute::_64, cute::_512>>, cute::tuple<int, int, int>, cute::TiledCopy<cute::Copy_Atom<cute::Copy_Traits<cute::SM90_TMA_STORE, cute::C<65536>, cute::AuxTmaParams<cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>, const cute::Layout<cute::tuple<cute::C<64>, cute::C<64>, cute::_1>, cute::tuple<cute::ScaledBasis<cute::C<1>, 1>, cute::ScaledBasis<cute::C<1>, 0>, cute::ScaledBasis<cute::C<1>, 2>>> &, const cute::Swizzle<3, 4, 3> &>>, bf16>, cute::Layout<cute::tuple<cute::_1, cute::tuple<cute::tuple<cute::tuple<cute::C<64>, cute::C<64>>, cute::C<9>>>>, cute::tuple<cute::C<0>, cute::tuple<cute::tuple<cute::tuple<cute::_64, cute::_1>, cute::C<4096>>>>>, cute::tuple<cute::C<64>, cute::C<576>>>>]" at line 733
                    instantiation of "void sm100::bwd::head64::run_bwd_phase1_kernel<D_QK>(const sm100::bwd::head64::SparseAttnBwdParams &) [with D_QK=512]" at line 5 of /home/users/chenquanlin/workspace/flash_mla_bwd/FlashMLA/csrc/sm100/prefill/sparse/bwd/head64/instantiations/phase1_k512.cu
        
        /home/users/chenquanlin/workspace/flash_mla_bwd/FlashMLA/csrc/sm100/prefill/sparse/bwd/head64/instantiations/../phase1.cuh(497): error: cannot deduce class template arguments
                          Tensor sQ = make_tensor(make_smem_ptr(plan.dKV_cfg.q_buf.data()), SmemLayoutQ{});
